# cinema-scrape

./: .gitignore  Cargo.toml  FEEDS.md  README.md  cinema_edera.xml  enrico_pizzuti.xml  feed_padova.xml  feed_trieste.xml  feeds.xml  rassegne.xml  space_cinema_1009.xml
.github/workflows/: update-feeds.yml
docs/: GITHUB_PAGES_SETUP.md  README.md
docs/feeds/: berlinale.xml  multisala.xml  padova.xml  rassegne.xml  tarantino.xml  trieste.xml  vista_theatre.xml
src/: berlinale.rs  cinema_edera.rs  cinema_padova.rs  cinema_trieste_scraper.rs  cinemazero.rs  cineplex_moderno.rs  cinergia_conegliano.rs  enrico_pizzuti.rs  feed_padova.rs  lib.rs  main.rs  multi_astra.rs  new_bev.rs  porto_astra.rs  rassegne.rs  rassegne_cristallo.rs  rassegne_edera.rs  space_cinema.rs  vista_theatre.rs
