[package]
name = "cinema-scrape"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
cookie_store = "0.21"
